Elaboracion de caso de prueba para la creacion de reportes
